# ApuracaoAssistidade_IBS_CBS_v1

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  HANDOFF.md  README.md  package.json  server.ts
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: ci.yml
ArquivosProjeto/: CONTRIBUTING.md  PRD_v2.md  PRD_v3.md  PROMPT_INICIO_PROJETO.md  ROADMAP.md  SPEC_ARCHITECTURE_v3.md  SPEC_BUSINESS_RULES.md  SPEC_XML_MAPPING_v2.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/fiscal_engine/: __init__.py  apuracao.py  conformity.py  enums.py  impact.py  models.py
backend/tests/: __init__.py  test_smoke.py
backend/tests/fiscal_engine/: __init__.py  conftest.py  test_apuracao.py  test_conformity.py  test_domain.py  test_impact.py
docs/: backlog-fatias.md  data-model.md  devcontainer-assessment.md  regras-negocio-fiscais.md
docs/adr/: 0001-multitenancy-schema-compartilhado-rls.md  0002-auth-propria-fastapi-users-jwt-argon2.md  0003-estilo-e-versionamento-da-api.md  0004-reorganizacao-repo-backend-frontend.md  0005-estrategia-fila-assincrona.md  0006-escopo-de-tenant-no-token.md  0007-chaves-primarias-uuid-v7.md  0008-layout-de-pacote-e-cwd-de-tooling-do-backend.md  0009-modelo-de-impacto-rtc.md  0010-apuracao-e-conformidade-ibscbs.md  0011-fronteira-de-pureza-do-engine-imposta-por-ci.md
docs/api/: contrato-api-v1.md
frontend/: .env.example  .prettierignore  eslint.config.js  index.html  metadata.json  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  types.ts
frontend/src/components/: XmlUploader.tsx
frontend/src/utils/: pdfGenerator.ts
src/: App.tsx  types.ts
src/components/: XmlUploader.tsx
src/utils/: pdfGenerator.ts
