# =============================================================================
# Layout decision (ADR 0008 — Opção B, aceita):
# backend/ é uma PASTA do monorepo, NÃO um pacote Python.
# Os pacotes Python top-level vivem DENTRO de backend/:
#   app/            — API FastAPI (criado em F1.0)
#   fiscal_engine/  — motor IBS/CBS puro (criado em F0.7)
#   workers/        — tarefas Dramatiq (criado em F1.x)
#
# cwd canônico do tooling: /workspace/backend
#   pytest      →  cd /workspace/backend && pytest
#   lint/format →  cd /workspace/backend && ruff check .  /  ruff format .
#   tipos       →  cd /workspace/backend && mypy .
#   API         →  cd /workspace/backend && uvicorn app.main:app --reload
#   worker      →  cd /workspace/backend && python -m dramatiq app.tasks
#
# Instalação editable (ambas as formas são válidas):
#   pip install -e "backend[dev,test]"   (de /workspace)
#   pip install -e ".[dev,test]"          (de /workspace/backend)
#
# Opção A (rejeitada): backend/ como pacote top-level, cwd /workspace, com
# package-dir={"" = ".."} e --cov-config prefixado. Quebrava "cd backend && pytest".
# Ver ADR 0008 para a decisão completa.
# =============================================================================

[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simples-apuracao-rtc-backend"
version = "0.1.0"
requires-python = ">=3.12"
description = "Backend do Simples Apuração RTC — API FastAPI + motor fiscal IBS/CBS"

# Dependências de runtime migradas de backend/requirements.txt (F0.4).
# requirements.txt foi reduzido a um shim para compatibilidade com ferramentas
# que ainda não leem pyproject.toml (ex.: pip install -r em scripts legados).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "psycopg[binary,pool]>=3.2",
    "fastapi-users[sqlalchemy]>=13.0",
    "argon2-cffi>=23.1",
    "dramatiq[redis]>=1.17",
    "redis>=5.0",
    "lxml>=5.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
]
dev = [
    "ruff>=0.9",
    "mypy>=2.0",
    "pre-commit>=4.0",
    # Import boundary enforcement — garante que fiscal_engine permanece domínio puro.
    "import-linter>=2.0",
    # Type stubs — bibliotecas sem py.typed inline
    "types-lxml>=2024.11",
    # SQLAlchemy mypy plugin: incluso no pacote base (sqlalchemy.ext.mypy.plugin)
    # pydantic.mypy plugin: incluso no pydantic base
    # Extras de teste incluídos para instalar tudo com um único extra [dev]:
    "simples-apuracao-rtc-backend[test]",
]

# ---------------------------------------------------------------------------
# Setuptools — descoberta de pacotes (Opção B / ADR 0008)
# Sem package-dir trick: descoberta padrão de pacotes dentro de backend/.
# app/, fiscal_engine/, workers/ ainda não existem (criados em F1.0/F0.7).
# Install editable funciona como distribuição vazia até lá — aceitável.
# tests* está em exclude para não vazar para o wheel.
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
include = ["app*", "fiscal_engine*", "workers*"]
exclude = ["tests*"]

# =============================================================================
# RUFF — lint + format
# line-length = 100: equilíbrio entre legibilidade e densidade de código.
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (imports não usados, variáveis não definidas, etc.)
    "I",    # isort (ordenação de imports)
    "N",    # pep8-naming (convenções de nomes)
    "UP",   # pyupgrade (sintaxe moderna Python)
    "B",    # flake8-bugbear (anti-padrões comuns e bugs sutis)
    "C4",   # flake8-comprehensions (list/dict/set comprehensions idiomáticas)
    "SIM",  # flake8-simplify (código mais simples e direto)
    "PTH",  # flake8-use-pathlib (preferir pathlib sobre os.path)
    "RUF",  # regras específicas do ruff
]
ignore = [
    # E501 (line-too-long) é gerenciado pelo formatter (ruff format), não pelo linter.
    "E501",
]

[tool.ruff.lint.isort]
# Pacotes de produto que viverão em backend/ (ADR 0008 / Opção B).
known-first-party = ["app", "fiscal_engine", "workers"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# MYPY — type checking strict
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

# Bibliotecas de terceiros sem stubs completos.
[[tool.mypy.overrides]]
module = [
    "dramatiq.*",
    "alembic.*",
    "fastapi_users.*",
    "argon2.*",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST
#
# Invocação canônica: cd /workspace/backend && pytest
# pyproject.toml é o rootdir (/workspace/backend) — coverage auto-descobre este
# arquivo sem --cov-config. Paths de relatório são relativos a /workspace/backend.
#
# Política de cobertura por domínio (gates com dentes quando o código existir):
#   • fiscal_engine/  ≥ 95%  — ativado em F0.7 (motor fiscal puro)
#   • app/            ≥ 80%  — ativado em F1.0 (scaffold FastAPI)
#   • workers/        ≥ 80%  — ativado em F1.x
#   • frontend        ≥ 70%  — tooling F0.5 (vitest/coverage)
#
# ACHADO 3 (RESOLVIDO em F0.7a): com --cov-fail-under=95 ativo nos addopts
# abaixo, o limiar passa a ter FONTE ÚNICA aqui; fail_under foi REMOVIDO de
# [tool.coverage.report] para não haver dois números divergentes.
#
# TODO F1.0 (introdução do pacote 'app' com gate ≥ 80%): NÃO manter um gate
# GLOBAL de 95 nos addopts, pois ele conflitaria com app ≥ 80. Medir POR
# PACOTE em passos separados, p.ex.:
#   pytest --cov=fiscal_engine --cov-fail-under=95
#   pytest --cov=app           --cov-fail-under=80
# Assim cada domínio tem seu próprio limiar sem o gate global distorcer a soma.
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    # F0.7a — gate do motor fiscal com dentes: mede SOMENTE fiscal_engine
    # (motor puro), exige ≥ 95% e emite relatório term + XML para o CI.
    # NÃO usar --cov=. (mediria tests/ — distorceria a métrica).
    "--cov=fiscal_engine",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=95",
    "-v",
]

# =============================================================================
# COVERAGE
# Configurado aqui para que `coverage run`/`coverage report` autônomos já
# reflitam a política do projeto. O gate efetivo vem de --cov no addopts acima.
# `source` permanece com os três pacotes de forma DOCUMENTAL; a medição ATIVA
# é delimitada por `--cov=fiscal_engine` (os demais ainda não existem).
# =============================================================================
[tool.coverage.run]
branch = true
source = ["app", "fiscal_engine", "workers"]
omit = [
    # Exclui testes do denominador — evita distorcer a métrica.
    "*/tests/*",
    "*/migrations/*",
    # ACHADO 7 (limpeza): */.devcontainer/* removido — estava fora de `source`
    # e nunca tinha efeito (no-op). Migrações e infra de container nunca devem
    # entrar no gate de cobertura.
]

[tool.coverage.report]
# ACHADO 3 (RESOLVIDO em F0.7a): `fail_under` foi REMOVIDO daqui. O limiar tem
# fonte única em `--cov-fail-under=95` (addopts), evitando dois números
# divergentes. Em F1.0, medir por pacote em passos separados (ver nota no
# bloco [tool.pytest.ini_options]).
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.\\s*$",  # ellipsis stubs
]

# =============================================================================
# IMPORT-LINTER — fronteiras arquiteturais do fiscal_engine
#
# Garante que o motor fiscal (domínio puro) NUNCA importe camadas de
# infraestrutura (app/, workers/) nem bibliotecas de I/O (fastapi, sqlalchemy,
# lxml, httpx, requests). Isso preserva testabilidade, portabilidade e o
# princípio de inversão de dependências.
#
# Invocação: cd /workspace/backend && lint-imports
# CI: step "lint-imports" no job backend de .github/workflows/ci.yml.
# =============================================================================
[tool.importlinter]
root_packages = ["fiscal_engine"]
# Required when any forbidden_module is a third-party package (not just intra-repo).
include_external_packages = true

[[tool.importlinter.contracts]]
name = "fiscal_engine é puro"
type = "forbidden"
source_modules = ["fiscal_engine"]
forbidden_modules = [
    # intra-repo (camadas de infra e orquestração)
    "app",
    "workers",
    # libs de I/O e framework web
    "fastapi",
    "sqlalchemy",
    "pydantic",
    "lxml",
    "httpx",
    "requests",
    # libs de infraestrutura / persistência / fila / cloud
    "dramatiq",
    "redis",
    "alembic",
    "psycopg",
    "boto3",
]
